test-suite/for-in/typecheck/pass/for_in_use_loop_var.first
interaction main() -> Unit {
  let a: Array<Int> = [1, 2, 3];
  var sum: Int = 0;
  for x in a {
    sum = sum + x;
  };
  return;
}
