test-suite/for-in/typecheck/fail/for_in_assign_loop_var.first
import * "Prelude"
interaction main() -> Unit {
  let a: Array<Int> = [1, 2, 3];
  for x in a {
    x = 1;
  };
  return;
}
